samples/_failures_safe/1761462611_a81f6c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fff9bf17.c: In function ‘tokenize_delimiter’:
./samples/SAFE/__tmp_fff9bf17.c:151:39: error: expected ‘;’ at end of input
  151 |         token->value[0] = state->input
      |                                       ^
      |                                       ;
./samples/SAFE/__tmp_fff9bf17.c:151:9: error: expected declaration or statement at end of input
  151 |         token->value[0] = state->input
      |         ^~~~~
./samples/SAFE/__tmp_fff9bf17.c:151:9: error: expected declaration or statement at end of input
